[gd_scene load_steps=15 format=2]

[ext_resource path="res://assests/sprites/bg/1856.jpg" type="Texture" id=1]
[ext_resource path="res://assests/signin.png" type="Texture" id=2]
[ext_resource path="res://assests/signinButt.png" type="Texture" id=3]
[ext_resource path="res://script/SignInScene.gd" type="Script" id=4]
[ext_resource path="res://assests/S_up.png" type="Texture" id=5]
[ext_resource path="res://Fonts/CooperFiveOpti-Black.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/Kanit-BlackItalic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/Kanit-Black.ttf" type="DynamicFontData" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 33
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 33
font_data = ExtResource( 6 )

[node name="SignInScene" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 507.772, 331.584 )
scale = Vector2( 0.215825, 0.228657 )
texture = ExtResource( 1 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 518.179, 110.571 )
texture = ExtResource( 2 )

[node name="SigninButton" type="TextureButton" parent="."]
margin_left = 390.47
margin_top = 448.525
margin_right = 659.47
margin_bottom = 546.525
texture_normal = ExtResource( 3 )
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignupButton" type="TextureButton" parent="."]
margin_left = 628.982
margin_top = 524.801
margin_right = 1360.98
margin_bottom = 865.801
rect_scale = Vector2( 0.221481, 0.221481 )
texture_normal = ExtResource( 5 )
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
margin_left = 465.0
margin_top = 220.0
margin_right = 835.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 2 )
custom_colors/selection_color = Color( 0.980392, 0.968627, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="."]
margin_left = 465.0
margin_top = 290.0
margin_right = 835.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 3 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Notification" type="Label" parent="."]
margin_left = 374.561
margin_top = 387.486
margin_right = 855.561
margin_bottom = 432.486
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.980392, 0.968627, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="Label" parent="."]
margin_left = 215.412
margin_top = 220.0
margin_right = 357.412
margin_bottom = 267.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Email:"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PW" type="Label" parent="."]
margin_left = 213.074
margin_top = 290.0
margin_right = 419.074
margin_bottom = 337.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password:"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="don\'t" type="Label" parent="."]
margin_left = 319.31
margin_top = 548.501
margin_right = 777.31
margin_bottom = 595.501
rect_scale = Vector2( 0.689364, 0.689364 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.784314, 0.968627, 0.901961, 1 )
text = "don't have an account?"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SigninButton" to="." method="_on_SigninButton_pressed"]
[connection signal="pressed" from="SignupButton" to="." method="_on_SignupButton_pressed"]
[connection signal="pressed" from="SignupButton" to="." method="_on_SigninButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
